# chainlearn-ai

./: Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
knowledge-base/mastering-blockchain/: README.md
scripts/: build_index.py  test_generation.py
src/: config.py  main.py
src/knowledge/: __init__.py  index_builder.py  ingestion.py  vectorstore.py
src/models/: __init__.py  course.py  quiz.py  user_profile.py
src/prompts/: __init__.py  course_generation.py  feedback.py  quiz_generation.py  system.py
src/routes/: courses.py  feedback.py  health.py  quizzes.py
src/services/: cohere_client.py  embedding.py  feedback_engine.py  generation.py  quiz_generator.py
tests/: __init__.py  test_embedding.py  test_feedback_engine.py  test_quiz_generator.py
